# devops-pocs

deployment-system-poc/: .terraform.lock.hcl  DevOps Deployment System Documentation.md  deployment.yaml  jenkins-values.yaml  main.tf  steps.txt  test.tf  values.yaml  versions.tf
deployment-system-poc/helm/my-app/: values.yaml
kafka-poc/: .gitignore  QUICKREF.md  README.md  activate.sh  consumer.py  create-topic.sh  pyproject.toml  requirements.txt  setup-kafka.sh  setup.py  start-kafka.sh  start-zookeeper.sh  start.sh
kafka-poc/config/: dev.env  prod.env
kafka-poc/scripts/: create-topic.sh
kafka-poc/src/: __init__.py  config.py  producer.py
kafka-poc/tests/: conftest.py  test_config.py  test_consumer.py  test_producer.py
opentelemetry-poc/: Cargo.toml  README.md  docker-compose.yml  jaeger-config.yml  otel-collector-config.yml  test-order.sh
opentelemetry-poc/services/common/: Cargo.toml
opentelemetry-poc/services/common/src/: lib.rs
opentelemetry-poc/services/order-ingestion/: Cargo.toml  Dockerfile
opentelemetry-poc/services/order-ingestion/src/: main.rs
opentelemetry-poc/services/order-processor/: Cargo.toml  Dockerfile
opentelemetry-poc/services/order-processor/src/: main.rs
opentelemetry-poc/services/order-storage/: Cargo.toml  Dockerfile
opentelemetry-poc/services/order-storage/src/: main.rs
