[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.15", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-client"] }
tracing = "0.1"
tracing-opentelemetry = "0.23"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
