[package]
name = "order-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-opentelemetry = "0.23"
opentelemetry = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
chrono = "0.4"
